--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="loading-0-constant">
 <div id="app"></div>
-<script src="/react-site/build/theme.bundle.js"></script>
-<script src="/react-site/build/app.bundle.js"></script>
+<script src="/copProjectReact/build/theme.bundle.js"></script>
+<script src="/copProjectReact/build/app.bundle.js"></script>
 </body>
 </html>
