--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1, user-scalable=no" />
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9CUj5tHgmWtq0EVU9TW_PxMLL3zRmwbM&libraries=geometry,places,visualization"></script> 
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body class="loading-0-constant">
 <div id="app"></div>
 <script src="/copProjectReact/build/theme.bundle.js"></script>
 <script src="/copProjectReact/build/app.bundle.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
