--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body class="loading-0-constant">
 <div id="app"></div>
-<script src="/copProjectReact/build/theme.bundle.js"></script>
-<script src="/copProjectReact/build/app.bundle.js"></script>
+<script src="/build/theme.bundle.js"></script>
+<script src="/build/app.bundle.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
